[gd_scene load_steps=3 format=3 uid="uid://dxhbsp0l566d6"]

[ext_resource type="Script" uid="uid://jeh5r2brp2mt" path="res://GenericDisplay/PopUpChart/PopUpChartControl.gd" id="1_lhte1"]
[ext_resource type="PackedScene" uid="uid://dlwq4kmdb3bhs" path="res://addons/easy_charts/control_charts/chart.tscn" id="1_uwobu"]

[node name="ChartControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lhte1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Hide Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Hide"

[node name="ChartContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Chart" parent="VBoxContainer/ChartContainer" instance=ExtResource("1_uwobu")]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/Hide Button" to="." method="_on_hide_button_pressed"]
